--- a/logout.html
+++ b/logout.html
@@ -72,7 +72,7 @@
     <div class="logout-container">
         <h1>Logout Successful</h1>
         <p>You have been successfully logged out of your account.</p>
-        <p class="thank-you">Thank you for visiting! We hope to see you again soon.</p>
+        <p class="thank-you">Thank you for visiting! We hope to see you again soon. NareshIT@team</p>
     
         <div class="quote">
             <p>"The only limit to our realization of tomorrow is our doubts of today." - Franklin D. Roosevelt</p>
